--- a/components/tabBar/tabBar.wxml
+++ b/components/tabBar/tabBar.wxml
@@ -1,5 +1,5 @@
+<wxs src="../../utils/utils.wxs" module="utils" />
 <view class="tabbar">
-
   <view class="item" bindtap="toPage" data-selected='order'>
     <image class="image" src="../../static/images/tab_order_s.png" wx:if="{{selected=='order'}}"></image>
     <image class="image" src="../../static/images/tab_order.png" wx:if="{{selected!='order'}}"></image>
@@ -11,11 +11,11 @@
     <text class="{{selected=='statistics'?'text':'text1'}}">统计</text>
   </view>
   <view class="item" >
-    <image class="image" src="../../static/images/index.png" wx:if="{{selected=='index'}}"></image>
-    <image class="image" src="../../static/images/index.png" wx:if="{{selected!='index'}}"></image>
+    <!-- <image class="image" src="../../static/images/index.png" wx:if="{{selected=='index'}}"></image>
+    <image class="image" src="../../static/images/index.png" wx:if="{{selected!='index'}}"></image> -->
     <text class="{{selected=='index'?'text':'text1'}}"></text>
   </view>
-  <view class="item" bindtap="toPage" data-selected='seller'>
+  <view class="item" bindtap="toPage" data-selected='seller' >
     <image class="image" src="../../static/images/tab_seller_s.png" wx:if="{{selected=='seller'}}"></image>
     <image class="image" src="../../static/images/tab_seller.png" wx:if="{{selected!='seller'}}"></image>
     <text class="{{selected=='seller'?'text':'text1'}}">门店</text>
